fixed clippy for older browsers

--- a/port.css
+++ b/port.css
@@ -400,7 +400,50 @@ nav a:hover {
 	float: left;
 }
 
+
+
 .port-desc-l{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	bottom: 0em;
+	left: 0em;
+	color: whitesmoke;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	flex-direction: column;
+	background-color: rgba(25, 25, 25, 0.8);
+/*	-webkit-clip-path: polygon(0 0, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0 100%);
+	clip-path: polygon(0 0, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0 100%);*/
+/*	transform: translateY(-100%);
+*/}
+
+.port-desc-l img{
+    position: absolute;
+    right: 31.5%;
+    bottom: 63%;
+    width: 38%;
+    max-width: 100%;
+}
+
+.port-item:hover .port-desc-l {
+	transform: translateX(0%);
+	transition: all ease-in-out 600ms;
+}
+
+.l-text{
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    padding: 4em;
+    margin-top: 1em;
+}
+
+@supports(clip-path: polygon(0 0, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0 100%)){
+	.port-desc-l{
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -417,29 +460,27 @@ nav a:hover {
 	-webkit-clip-path: polygon(0 0, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0 100%);
 	clip-path: polygon(0 0, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0 100%);
 	transform: translateX(-100%);
+	}
+
+	.port-desc-l img{
+	    position: absolute;
+	    transform: rotate(90deg);
+	    right: 14.5%;
+	    bottom: 27%;
+	    width: 38%;
+	    max-width: 100%;
+	}
+
+	.l-text{
+	    display: flex;
+	    position: absolute;
+	    right: 40%;
+	    flex-direction: column;
+	    padding: 1em;
+	    margin-top: 0em;
+	}
 }
 
-.port-desc-l img{
-    position: absolute;
-    transform: rotate(90deg);
-    right: 14.5%;
-    bottom: 27%;
-    width: 38%;
-    max-width: 100%;
-}
-
-.port-item:hover .port-desc-l {
-	transform: translateX(0%);
-	transition: all ease-in-out 600ms;
-}
-
-.l-text{
-    display: flex;
-    position: absolute;
-    right: 40%;
-    flex-direction: column;
-    padding: 1em;
-}
 
 .port-desc-r .button{
 	position: absolute;
@@ -448,7 +489,50 @@ nav a:hover {
 }
 
 
+
 .port-desc-r{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	bottom: 0em;
+	right: 0em;
+	color: whitesmoke;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	flex-direction: column;
+	background-color: rgba(25, 25, 25, 0.8);
+/*    -webkit-clip-path: polygon(40% 0%, 40% 20%, 100% 0, 100% 100%, 40% 80%, 40% 100%, 0% 50%);
+    clip-path: polygon(40% 0%, 40% 20%, 100% 0, 100% 100%, 40% 80%, 40% 100%, 0% 50%);*/
+    transform: translateY(100%);
+}
+
+
+.port-item:hover .port-desc-r {
+	transform: translateX(0%);
+	transition: all ease-in-out 600ms;
+}
+
+.port-desc-r img{
+    position: absolute;
+    right: 31.5%;
+    bottom: 63%;
+    width: 38%;
+    max-width: 100%;
+}
+
+.r-text{
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    padding: 4em;
+    margin-top: 1em;
+}
+
+@supports(clip-path: polygon(40% 0%, 40% 20%, 100% 0, 100% 100%, 40% 80%, 40% 100%, 0% 50%)){
+	.port-desc-r{
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -467,12 +551,6 @@ nav a:hover {
     transform: translateX(100%);
 }
 
-
-.port-item:hover .port-desc-r {
-	transform: translateX(0%);
-	transition: all ease-in-out 600ms;
-}
-
 .port-desc-r img{
     position: absolute;
     transform: rotate(-90deg);
@@ -488,6 +566,8 @@ nav a:hover {
     left: 40%;
     flex-direction: column;
     padding: 1em;
+    margin-top: 0em;
+}
 }
 
 @media(max-width:1200px){
@@ -731,7 +811,7 @@ nav a:hover {
 	animation: snow 10s linear infinite;
 }
 
-}
+
 @keyframes snow {
   0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
   50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
